[package]
name = "mini-irc-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["std", "serde_derive"]}
bincode = {version = "1.3"}
tokio ={version="1.*", features=["io-util", "sync"]}
tracing = { version = "*"}
x25519-dalek = "1.2.0"
rand_core = { version = "0.6.4", features = ["getrandom"]}
aes-gcm = "0.10.1"
anyhow = "1.0.69"
rand = "0.8.5"
[dev-dependencies]
tokio ={version="1.*", features=["io-util", "sync", "net", "rt", "macros", "rt-multi-thread"]}

