[package]
name = "mini-irc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-irc-protocol = { version = "0.1.0", path = "../mini-irc-protocol" }
tokio = { version = "1.26.0", features = ["full"] }
