[package]
name = "mini-irc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
mini-irc-protocol = { version = "0.1.0", path = "../mini-irc-protocol" }
rand_core = { version = "0.5"}
tokio = { version = "1.26.0", features = ["full"] }
x25519-dalek = "1.2.0"

[dev-dependencies]
rand_core = { version = "0.5", default-features = false, features = ["getrandom"] }

